# ChangeLog for www-client/epiphany
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/epiphany/ChangeLog,v 1.225 2010/01/11 12:46:41 pacho Exp $

*epiphany-2.26.3-r3 (11 Jan 2010)

  11 Jan 2010; Pacho Ramos <pacho@gentoo.org> +epiphany-2.26.3-r3.ebuild,
  +files/epiphany-2.26.3-revert-downloadir.patch:
  Fix download dir reset by preferences dialog, bug 292867

*epiphany-2.28.2 (21 Dec 2009)

  21 Dec 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +epiphany-2.28.2.ebuild:
  Version bump. Bug fixes.

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org> epiphany-2.26.3-r1.ebuild:
  alpha/ia64/sparc stable wrt #281427

  16 Nov 2009; Mounir Lamouri <volkmar@gentoo.org>
  epiphany-2.26.3-r2.ebuild:
  Stable for ppc, bug 280393

  09 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  epiphany-2.26.3-r2.ebuild:
  stable x86, security bug 280393

*epiphany-2.28.1 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +epiphany-2.28.1.ebuild, metadata.xml:
  New version for GNOME 2.28.

*epiphany-2.26.3-r2 (22 Oct 2009)

  22 Oct 2009; Romain Perier <mrpouet@gentoo.org>
  +epiphany-2.26.3-r2.ebuild, +files/epiphany-2.26.3-favicon-cache.patch:
  Fix missing favicon on most websites (due to a missing pattern matching)
  per bug #290024.

  03 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  epiphany-2.26.3-r1.ebuild:
  Stable on alpha, bug #282177

  27 Sep 2009; nixnut <nixnut@gentoo.org> epiphany-2.26.3-r1.ebuild:
  ppc stable #282177

  25 Sep 2009; Brent Baude <ranger@gentoo.org> epiphany-2.26.3-r1.ebuild:
  Marking epiphany-2.26.3-r1 ppc64 for bug 282177

  22 Sep 2009; Markus Meier <maekke@gentoo.org> epiphany-2.26.3-r1.ebuild:
  amd64/x86 stable, bug #282177

  21 Sep 2009; Mart Raudsepp <leio@gentoo.org> epiphany-2.26.3-r1.ebuild:
  QA: Remove by now unnecessary patch from this revision

*epiphany-2.26.3-r1 (02 Aug 2009)

  02 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org>